--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   	"chai": "^1.9.1",
     "chai-as-promised": "^4.1.1",
     "cucumber": "^0.4.2",
-    "protractor": "^1.2.0"
+    "protractor": "^1.2.0",
+    "protractor-cucumber-junit": "latest"
   }
 }
